// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object should fail to parse an object with the value 1`] = `
[
  {
    "code": "invalid_type",
    "message": "Expected value to be a string",
    "path": "a",
    "value": 1,
  },
]
`;

exports[`object should fail to parse non-objects 1`] = `
[
  {
    "code": "invalid_type",
    "message": "Expected value to be an object",
    "path": "",
    "value": "",
  },
]
`;

exports[`object should not accept arrays 1`] = `
[
  {
    "code": "invalid_type",
    "message": "Expected value to be an object",
    "path": "",
    "value": [
      0,
    ],
  },
]
`;

exports[`object should not accept null values 1`] = `
[
  {
    "code": "invalid_type",
    "message": "Expected value to be an object",
    "path": "",
    "value": null,
  },
]
`;

exports[`object should only consider own properties 1`] = `
[
  {
    "code": "invalid_type",
    "message": "Expected value to be a number",
    "path": "a",
    "value": undefined,
  },
]
`;

exports[`object the path property should work with nested objects 1`] = `
[
  {
    "code": "invalid_type",
    "message": "Expected value to be a string",
    "path": "a.b",
    "value": 0,
  },
]
`;
